final change fix update, add spec

--- a/src/app/doctor/doctor-list/doctor-list.component.html
+++ b/src/app/doctor/doctor-list/doctor-list.component.html
@@ -31,7 +31,7 @@
       <td>{{ doc.dName }}</td>
       <td>{{ doc.dMobileNo }}</td>
       <td>{{ doc.dAdd }}</td>
-      <td>{{ doc?.specialization?.speciality }}</td>
+      <td>{{ doc?.dSpec}}</td>
 
       <td>
         <button (click)="getDoctor(doc.dName)" class="btn btn-info">
