--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,6 +1,6 @@
 .image{
     height:39em; background-size:cover; width:auto;
-    background-image:url('../../assets/Image/image.jpg');
+    background-image:url('../../assets/Image/image.jpeg');
     background-position:50% 50%;
     position: relative;
 }
