--- a/src/app/patient/patient-list/patient-list.component.html
+++ b/src/app/patient/patient-list/patient-list.component.html
@@ -28,7 +28,7 @@
       <td>{{ pat.pMobileNo}}</td>
       <td>{{ pat.pAdd}}</td>
       <td>{{ pat.pDob}}</td>
-      <td>{{ pat?.doc?.doctorName}}</td>
+      <td>{{ pat?.pDoc}}</td>
       <td>
         <button (click)="getPatient(pat.pName)" class="btn btn-primary">
           Update
