--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -27,6 +27,8 @@
     <a href="javascript:void(0)" class="closebtn" (click)="closeNav()">×</a>
     <a (click)="patinetList()">Patient</a>
     <a (click)="doctorList()">Doctor</a>
+    <a (click)="testList()">Test</a>
+    <a (click)="specializationList()">Specialization</a>
     <a (click)="departmentList()" *ngIf="showAdminBoard">Department</a>
     <a (click)="employeeList()" *ngIf="showAdminBoard">Employee</a>
   </div>
