--- a/src/app/patient/patient.component.html
+++ b/src/app/patient/patient.component.html
@@ -1,8 +1,7 @@
 <app-index></app-index>
 <div class="container" style="margin-top: 8%;">
   <div class="text-center">
-    <h3>Patient Registration Page</h3>
-    <p>Register the Patient</p>
+    <h3>Patient {{title}} Page</h3>
   </div>
   <div class="row justify-content-center align-items-center">
     <div class="col-10 col-md-8 col-lg-6">
@@ -92,15 +91,15 @@
           </div>
         </div>
 
-        <!-- Doctor -->
-        <!-- <div class="form-group">
-          <label for="doc">Doctor Id : </label>
-          <select name="doc" class="form-control" [(ngModel)]="pat.doc.doctorId">
-            <option [value]="doctor.doctorId" *ngFor="let doctor of docList">
-              {{doctor.doctorId}} {{doctor.doctorName}}
+        <!-- doc -->
+      <div class="form-group">
+        <label for="doctor">Doctor name</label>
+        <select name="doctor" class="form-control" [(ngModel)]="pat.doc.doctorName">
+            <option [value]="doc.dName" *ngFor="let doc of docList">
+                    {{doc?.dName}}
             </option>
-          </select>
-        </div> -->
+        </select>
+    </div>
 
         <!-- Test -->
         <!-- <div class="form-group">
@@ -112,7 +111,7 @@
           </select>
         </div> -->
 
-        <button class="btn btn-primary btn-customized">Save</button>
+        <button class="btn btn-primary">{{btn}}</button>
       </form>
     </div>
   </div>
